--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -7,15 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.4" />
+    <PackageReference Include="OlivierL.OfficeOpenXml.Extensions" Version="1.0.0" />
     <PackageReference Include="ReactiveUI.Validation" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="LocalStorage_SQLite\" />
   </ItemGroup>
 
 </Project>
