Fixes + DB + Arch

--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -30,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Collections\Collections.csproj" />
+    <ProjectReference Include="..\DBRealization\DBRealization.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 </Project>
