--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -6,14 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.10.0" />
-    <PackageReference Include="FirebirdSql.Data.FirebirdClient" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.4" />
-    <PackageReference Include="OlivierL.OfficeOpenXml.Extensions" Version="1.0.0" />
-    <PackageReference Include="ReactiveUI.Validation" Version="2.1.1" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\DBRealization\DBRealization.csproj" />
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
   </ItemGroup>
 
