Changes to EntityFrameWork

--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -6,7 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DBRealization\DBRealization.csproj" />
+    <PackageReference Include="FirebirdSql.EntityFrameworkCore.Firebird" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Helpers\Helpers.csproj" />
   </ItemGroup>
 
