--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Avalonia" Version="0.10.5" />
     <PackageReference Include="FirebirdSql.EntityFrameworkCore.Firebird" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
   </ItemGroup>
