--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Avalonia" Version="0.10.5" />
     <PackageReference Include="FirebirdSql.EntityFrameworkCore.Firebird" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="ReactiveUI.Validation" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
