--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
+    <ProjectReference Include="..\Spravochniki\Spravochniki.csproj" />
   </ItemGroup>
 
 </Project>
