--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="MessageBox.Avalonia" Version="1.5.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
+    <ProjectReference Include="..\Spravochniki\Spravochniki.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 </Project>
