--- a/FormExport/FormExport.csproj
+++ b/FormExport/FormExport.csproj
@@ -5,19 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AvaloniaXaml Remove="Forms\**" />
+    <Compile Remove="Forms\**" />
+    <EmbeddedResource Remove="Forms\**" />
+    <None Remove="Forms\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.3.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Models\Models.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Forms\Form3\" />
-    <Folder Include="Forms\Form4\" />
-    <Folder Include="Forms\Form5\" />
-    <Folder Include="Forms\Form2\" />
-    <Folder Include="Forms\Form1\" />
   </ItemGroup>
 
 </Project>
