--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.10.6" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.6" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.6" />
+    <PackageReference Include="EPPlus" Version="4.5.3.3" />
     <PackageReference Include="MessageBox.Avalonia" Version="1.5.1" />
   </ItemGroup>
   <ItemGroup>
