--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.6" />
+    <PackageReference Include="EPPlus" Version="4.5.3.3" />
     <PackageReference Include="FirebirdSql.EntityFrameworkCore.Firebird" Version="7.10.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.18" />
   </ItemGroup>
