--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -30,4 +30,9 @@
     <ProjectReference Include="..\Spravochniki\Spravochniki.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Controls\DataGrid\CustomCell.axaml.cs">
+      <DependentUpon>CustomCell.axaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
