--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -37,5 +37,8 @@
     <Compile Update="Controls\DataGrid\CustomCell.axaml.cs">
       <DependentUpon>CustomCell.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\RowNumber.axaml.cs">
+      <DependentUpon>RowNumber.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
