--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -34,6 +34,9 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Update="Controls\DataGrid\CellText.axaml.cs">
+      <DependentUpon>CellText.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Controls\DataGrid\CustomCell.axaml.cs">
       <DependentUpon>CustomCell.axaml</DependentUpon>
     </Compile>
