--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -50,4 +50,7 @@
       <DependentUpon>RowNumber.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controls\DataGrid\Новая папка\" />
+  </ItemGroup>
 </Project>
