--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -37,6 +37,9 @@
     <Compile Update="Controls\DataGrid\Cell.axaml.cs">
       <DependentUpon>Cell.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Controls\DataGrid\DataGrids\DataGridForm12.axaml.cs">
+      <DependentUpon>DataGridForm12.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Controls\DataGrid\DataGrids\DataGridNote.axaml.cs">
       <DependentUpon>DataGridNote.axaml</DependentUpon>
     </Compile>
