--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -18,6 +18,10 @@
     <Compile Remove="Assets\Converters.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Assets\arrow.png" />
+    <None Remove="Assets\arrowI.png" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.10.10" />
     <PackageReference Include="Avalonia.Desktop" Version="0.10.10" />
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.10" />
@@ -109,11 +113,17 @@
     <Compile Update="Controls\DataGrid\DataGrids\DataGridReports.axaml.cs">
       <DependentUpon>DataGridReports.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\RAOCodeCalcWindow.axaml.cs">
+      <DependentUpon>RAOCodeCalcWindow.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\RowNumberIn.axaml.cs">
       <DependentUpon>RowNumberIn.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\RowNumber.axaml.cs">
       <DependentUpon>RowNumber.axaml</DependentUpon>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\data\" />
   </ItemGroup>
 </Project>
