--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -27,6 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.3" />
+    <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.13.3" />
+    <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.3" />
     <PackageReference Include="EPPlus" Version="4.5.3.3" />
     <PackageReference Include="FirebirdSql.EntityFrameworkCore.Firebird" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
