--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.22" />
     <PackageReference Include="EPPlus" Version="7.0.8" />
     <PackageReference Include="JsonSubTypes" Version="2.0.1" />
+    <PackageReference Include="Live.Avalonia" Version="1.3.1" />
     <PackageReference Include="MessageBox.Avalonia" Version="1.7.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.20">
       <PrivateAssets>all</PrivateAssets>
