--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="EPPlus" Version="7.0.8" />
     <PackageReference Include="FirebirdSql.EntityFrameworkCore.Firebird" Version="9.0.2" />
     <PackageReference Include="JsonSubTypes" Version="2.0.1" />
+    <PackageReference Include="Live.Avalonia" Version="1.3.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.20">
       <PrivateAssets>all</PrivateAssets>
