--- a/Spravochniki/Spravochniki.csproj
+++ b/Spravochniki/Spravochniki.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EPPlus" Version="7.0.8" />
+  </ItemGroup>
+
 </Project>
