--- a/Client_App/App.config
+++ b/Client_App/App.config
@@ -10,6 +10,9 @@
             <setting name="PasFolderDefaultPath" serializeAs="String">
                 <value>Y:\!!! Поручения\Паспорта ЗРИ\Хранилище паспортов ЗРИ</value>
             </setting>
+            <setting name="LastDbBackupDate" serializeAs="String">
+                <value />
+            </setting>
         </Client_App.Properties.Settings>
     </userSettings>
 </configuration>
