ExcelExportIntersections rework done

--- a/Client_App/App.config
+++ b/Client_App/App.config
@@ -13,6 +13,12 @@
             <setting name="LastDbBackupDate" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SystemFolderDefaultPath" serializeAs="String">
+                <value>default</value>
+            </setting>
+            <setting name="OnlyOneAppInstanceAllowed" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Client_App.Properties.Settings>
     </userSettings>
 </configuration>
