Test version for Ivan
run app with parameter, export excel and close app

--- a/Client_App/App.config
+++ b/Client_App/App.config
@@ -19,6 +19,9 @@
             <setting name="OnlyOneAppInstanceAllowed" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AppStartupParameters" serializeAs="String">
+                <value />
+            </setting>
         </Client_App.Properties.Settings>
     </userSettings>
 </configuration>
