--- a/Client_App/Properties/Settings.settings
+++ b/Client_App/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="OnlyOneAppInstanceAllowed" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="AppStartupParameters" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
