--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -32,7 +32,8 @@
     <PackageReference Include="Avalonia.Diagnostics" Version="0.10.22" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.10.22" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.22" />
-    <PackageReference Include="EPPlus" Version="7.5.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="EPPlus" Version="7.5.2" />
     <PackageReference Include="JsonSubTypes" Version="2.0.1" />
     <PackageReference Include="MessageBox.Avalonia" Version="[2.0.1]" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
