--- a/Client_App/App.config
+++ b/Client_App/App.config
@@ -22,6 +22,9 @@
             <setting name="AppStartupParameters" serializeAs="String">
                 <value />
             </setting>
+            <setting name="AppLaunchedInNorao" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Client_App.Properties.Settings>
     </userSettings>
 </configuration>
