--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.22" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="EPPlus" Version="7.5.2" />
+    <PackageReference Include="ExtendedNumerics.BigDecimal" Version="3000.0.3.40" />
     <PackageReference Include="JsonSubTypes" Version="2.0.1" />
     <PackageReference Include="MessageBox.Avalonia" Version="[2.0.1]" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
