--- a/Client_App/App.config
+++ b/Client_App/App.config
@@ -25,6 +25,9 @@
             <setting name="AppLaunchedInNorao" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="IsFirstAppRun" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Client_App.Properties.Settings>
     </userSettings>
 </configuration>
