--- a/Client_App/Properties/Settings.settings
+++ b/Client_App/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="AppLaunchedInNorao" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="IsFirstAppRun" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
