--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -145,6 +145,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Update="Views\Forms\Forms2\Form_20.axaml.cs">
+      <DependentUpon>Form_20.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Messages\GetRegionAndFormNums.axaml.cs">
       <DependentUpon>GetRegionAndFormNums.axaml</DependentUpon>
     </Compile>
