--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -66,7 +66,7 @@
     <Resource Include="Assets\Radiation_sign.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Commands\AsyncCommands\NewCheckForm\NewCheckForm.axaml.cs">
+    <Compile Update="Views\Forms\NewCheckForm.axaml.cs">
       <DependentUpon>NewCheckForm.axaml</DependentUpon>
     </Compile>
     <Compile Update="Controls\DataGrid\Cell.axaml.cs">
