--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -186,4 +186,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\AsyncCommands\TmpNewCommands\" />
+  </ItemGroup>
 </Project>
