--- a/Client_App/App.config
+++ b/Client_App/App.config
@@ -28,6 +28,9 @@
             <setting name="IsFirstAppRun" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="AutoReplaceIsEnable" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Client_App.Properties.Settings>
     </userSettings>
 </configuration>
