Adding Form 40 и 41 (Critical error

--- a/Client_App/App.config
+++ b/Client_App/App.config
@@ -26,7 +26,7 @@
                 <value>False</value>
             </setting>
             <setting name="IsFirstAppRun" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
         </Client_App.Properties.Settings>
     </userSettings>
