--- a/Client_App/Properties/launchSettings.json
+++ b/Client_App/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "Client_App": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-n"
     }
   }
 }
