--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -173,6 +173,9 @@
     <Compile Update="Views\Forms\Forms2\Form_20.axaml.cs">
       <DependentUpon>Form_20.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Messages\AskSubjectRFMessage.axaml.cs">
+      <DependentUpon>AskSubjectRFMessage.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Messages\AskIntMessageWindow.axaml.cs">
       <DependentUpon>AskIntMessageWindow.axaml</DependentUpon>
     </Compile>
