--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -209,6 +209,9 @@
     <Compile Update="Views\Forms\Forms2\Form_20.axaml.cs">
       <DependentUpon>Form_20.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\MainWindowTabs\Forms2TabControl.axaml.cs">
+      <DependentUpon>Forms2TabControl.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\MainWindowTabs\Forms1TabControl.axaml.cs">
       <DependentUpon>Forms1TabControl.axaml</DependentUpon>
     </Compile>
