--- a/Client_App/Client_App.csproj
+++ b/Client_App/Client_App.csproj
@@ -119,6 +119,30 @@
     <Compile Update="Views\Forms\Forms2\Form_21.axaml.cs">
       <DependentUpon>Form_21.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_57.axaml.cs">
+      <DependentUpon>Form_57.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_56.axaml.cs">
+      <DependentUpon>Form_56.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_55.axaml.cs">
+      <DependentUpon>Form_55.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_54.axaml.cs">
+      <DependentUpon>Form_54.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_53.axaml.cs">
+      <DependentUpon>Form_53.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_52.axaml.cs">
+      <DependentUpon>Form_52.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_51.axaml.cs">
+      <DependentUpon>Form_51.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Forms\Forms5\Form_50.axaml.cs">
+      <DependentUpon>Form_50.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Forms\NewCheckForm.axaml.cs">
       <DependentUpon>NewCheckForm.axaml</DependentUpon>
     </Compile>
@@ -213,6 +237,9 @@
     </Compile>
     <Compile Update="Views\MainWindowTabs\Forms1TabControl.axaml.cs">
       <DependentUpon>Forms1TabControl.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\MainWindowTabs\Forms5TabControl.axaml.cs">
+      <DependentUpon>Forms5TabControl.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\MainWindowTabs\Forms4TabControl.axaml.cs">
       <DependentUpon>Forms4TabControl.axaml</DependentUpon>
