--- a/Client_App/Properties/Settings.settings
+++ b/Client_App/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="AutoReplaceIsEnable" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="SkippedVersion" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="LastUpdateCheck" Type="System.DateTime" Scope="User">
+      <Value Profile="(Default)">01/01/0001 00:00:00</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
